force-app/main/default/objects/Segmentation_Breakout__c/Segmentation_Breakout__c.object-meta.xml
<CustomObject>
    <label>Segmentation Breakout</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Segmentation Breakout  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Segmentation Breakouts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>