force-app/main/default/objects/Segmentation_Breakout__c/fields/Case_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Case_Quantity__c</fullName>
    <label>Case Quantity</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>