force-app/main/default/objects/Segmentation_Breakout__c/fields/Contracted_Growth_Amount__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Growth_Amount__c</fullName>
    <label>Contracted Growth Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>