force-app/main/default/objects/Segmentation_Breakout__c/fields/Price_Point__c.field-meta.xml
<CustomField>
    <fullName>Price_Point__c</fullName>
    <label>Price Point</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>