force-app/main/default/objects/Segmentation_Breakout__c/fields/Product_Segment__c.field-meta.xml
<CustomField>
    <fullName>Product_Segment__c</fullName>
    <label>Product Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Biologics</fullName>
            </value>
            <value>
                <fullName>Cement</fullName>
            </value>
            <value>
                <fullName>Extremities</fullName>
            </value>
            <value>
                <fullName>Foot &amp; Ankle</fullName>
            </value>
            <value>
                <fullName>Hips</fullName>
            </value>
            <value>
                <fullName>Knees</fullName>
            </value>
            <value>
                <fullName>ROSA</fullName>
            </value>
            <value>
                <fullName>Sports Medicine</fullName>
            </value>
            <value>
                <fullName>Surgical</fullName>
            </value>
            <value>
                <fullName>Trauma</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>