force-app/main/default/objects/Segmentation_Breakout__c/fields/Segmentation_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Segmentation_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Segmentation Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Segmentation Breakouts</relationshipLabel>
    <relationshipName>Segmentation_Breakout_Opps</relationshipName>
    <type>Lookup</type>
</CustomField>