force-app/main/default/objects/Segmentation_Breakout__c/fields/Surgeon_2__c.field-meta.xml
<CustomField>
    <fullName>Surgeon_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Surgeon 2</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Segmentation Breakouts (Surgeon 2)</relationshipLabel>
    <relationshipName>Segmentation_Breakouts</relationshipName>
    <type>Lookup</type>
</CustomField>