force-app/main/default/objects/Segmentation_Breakout__c/fields/Surgeon_3__c.field-meta.xml
<CustomField>
    <fullName>Surgeon_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Surgeon 3</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Segmentation Breakouts (Surgeon 3)</relationshipLabel>
    <relationshipName>Segmentation_Breakouts1</relationshipName>
    <type>Lookup</type>
</CustomField>