force-app/main/default/objects/Segmentation_Breakout__c/fields/Surgeon_4__c.field-meta.xml
<CustomField>
    <fullName>Surgeon_4__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Surgeon 4</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Segmentation Breakouts (Surgeon 4)</relationshipLabel>
    <relationshipName>Segmentation_Breakouts4</relationshipName>
    <type>Lookup</type>
</CustomField>