force-app/main/default/objects/Segmentation_Breakout__c/fields/Surgeon__c.field-meta.xml
<CustomField>
    <fullName>Surgeon__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Surgeon</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Segmentation Breakouts</relationshipLabel>
    <relationshipName>Segmentation_Breakouts_Surgeon</relationshipName>
    <type>Lookup</type>
</CustomField>