force-app/main/default/objects/Segmentation_Breakout__c/fields/Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue__c</fullName>
    <formula>IF(ISBLANK( Contracted_Growth_Amount__c), Case_Quantity__c  *  Price_Point__c, Contracted_Growth_Amount__c)</formula>
    <label>Total Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>