force-app/main/default/objects/Segmentation_Breakout__c/validationRules/Primary_Competitor_Required_for_Growth.validationRule-meta.xml
<ValidationRule>
    <fullName>Primary_Competitor_Required_for_Growth</fullName>
    <active>true</active>
    <description>Select Primary Competitor details.</description>
    <errorConditionFormula>And(
ISPICKVAL(Type__c , &quot;Growth&quot;),
ISBLANK(Primary_Competitor__c)
)</errorConditionFormula>
    <errorMessage>For Growth, Primary Competitor(s) should be selected.</errorMessage>
</ValidationRule>